tests/baselines/reference/interfaceImplementation3.errors.txt
==== tests/cases/compiler/interfaceImplementation3.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C4 implements I1 {
          ~~
!!! interfaceImplementation3.ts(8,7): error TS2137: Class C4 declares interface I1 but does not implement it:
!!! 	Type 'C4' is missing property 'iAny' from type 'I1'.
        public iObj:{ };
        public iNum:number;
        public iFn() { }
    }
    
    
    